--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+
+    <header>
+
+        <a href="" class="logo">
+            <img src="images/logo.svg" alt="logo">
+        </a>
+        
+    </header>
+
+
     <h1>hello world</h1>
     <h1>hello Universe!</h1>
 </body>
